k8s-notebooks/service.yaml
# Define a service for theia
# TODO(jlewi): This needs to be adjusted based on kpt setters
apiVersion: v1
kind: Service
metadata:
  name: mnist-theia
spec:
  ports:
  - name: http-theia
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    notebook-name: mnist
  type: ClusterIP
